# AuthFastAPI

./: bootstrap.py  env.bat  pyproject.toml
backend/: main.py
backend/database/: __init__.py  database.py
backend/models/: user.py
backend/routes/: auth.py
notebooks/: 01_hello_notebook.ipynb
scanner/app/: main.py
scanner/app/api/: dependencies.py
scanner/app/api/routes/: __init__.py
scanner/app/api/routes/v1/: __init__.py  auth.py  users.py
scanner/app/core/: config.py  database.py  security.py
scanner/app/db/models/: token.py  user.py
scanner/app/middleware/: auth_middleware.py
scanner/app/schemas/: token.py  user.py
src/scanner/: dummy.py
src/tests/: test_dagestan.py
