[project]
name = "scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mehdi Hayani Mechkouri", email = "hayanimehdi.m@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
