[project]
name = "scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mehdi Hayani Mechkouri", email = "hayanimehdi.m@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "jwt>=1.3.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "ruff>=0.11.2",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
